Finalizando primeira parte

--- a/receitas/templates/receita.html
+++ b/receitas/templates/receita.html
@@ -67,9 +67,9 @@
 					<div class="col-12 col-md-8">
 						<div class="receipe-headline my-5">
 							<span>{{receita.data_receita}}</span>
-							<h2>{{receira.nome_receita}}</h2>
+							<h2>{{receita.nome_receita}}</h2>
 							<div class="receipe-duration">
-								<h6>Preparo: {{receita.tempo_prepato}} minutos</h6>
+								<h6>Preparo: {{receita.tempo_preparo}} minutos</h6>
 								<h6>Rendimento: {{receita.rendimento}} porçoes</h6>
 								<h6>Categoria: {{receita.categoria}}</h6>
 								<h6>Por: Pessoa</h6>
